--- a/game.css
+++ b/game.css
@@ -10,7 +10,7 @@ body{
     font-size: 40px;
     color: white;
     width: 50%;
-    height: 50vw;
+    height: 550px;
     background-color: #44A9D5;
     padding: 10px;
     margin-top:50px;
