--- a/game.css
+++ b/game.css
@@ -7,7 +7,7 @@ body{
     margin-top: 100px;
     text-align: center;
     margin: auto;
-    font-size: 40px;
+    font-size: 30px;
     color: white;
     width: 50%;
     height: 550px;
@@ -16,3 +16,7 @@ body{
     margin-top:50px;
 }
 
+button{
+    font-size: 15px;
+    border-radius: 7px;
+}
